--- a/hola/Informando.ipynb
+++ b/hola/Informando.ipynb
@@ -41,7 +41,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#type(variable) conoce el tipo de variable\n",
+        "#17type(variable) conoce el tipo de variable\n",
         "\"\"\"\n",
         "La varibles almacenan informacion estas no pueden tener espacios,\n",
         "existen los:\n",
